# DariX

./: .gitignore  CHANGELOG.md  DARIX_DESIGN.md  EXCEPTION_SYSTEM.md  LICENSE  Makefile  README.md  README_MATH.md  REPL.md  build.sh  e2e_test.go  go.mod  install.sh  install_local.sh  install_termux.sh  main.go  test.dax  test_fix.sh  test_native.dax
.github/workflows/: README.md  ci.yml  release.yml
ast/: ast.go
benchmarks/: benchmark_runner.dax  jit_benchmark.dax  optimized_vm_test.dax  performance_comparison.dax  vm_basic_benchmark.dax  vm_simple_benchmark.dax  vm_vs_interpreter.dax
code/: instructions.go  instructions_test.go
compiler/: bytecode.go  compiler.go  compiler_test.go  errors.go  symbol_table.go
cpp/: CMakeLists.txt  README.md
cpp-src/: CHANGELOG.md  CMakeLists.txt  README.md  bench.py  test_all_features.dax  test_array.dax  test_crypto.dax  test_datetime.dax  test_encoding.dax  test_fmt.dax  test_fmt2.dax  test_fs.dax  test_graph.dax  test_io.dax  test_json.dax  test_linkedlist.dax  test_map.dax  test_native.dax  test_net.dax  test_net_http.dax  test_net_small.dax  test_new_import.dax  test_os.dax  test_queue.dax  test_random.dax  test_regex.dax  test_set.dax  test_stack.dax  test_string.dax  test_tree.dax
cpp-src/include/darix/: ast.hpp  code.hpp  compiler.hpp  interpreter.hpp  lexer.hpp  object.hpp  parser.hpp  token.hpp  version.hpp  vm.hpp
cpp-src/include/darix/native/: native.hpp  native_array.hpp
cpp-src/src/: ast.cpp  code.cpp  compiler.cpp  interpreter.cpp  lexer.cpp  main.cpp  object.cpp  parser.cpp  token.cpp  vm.cpp
cpp-src/src/native/: native.cpp  native_array.cpp  native_crypto.cpp  native_datetime.cpp  native_encoding.cpp  native_fs.cpp  native_graph.cpp  native_io.cpp  native_json.cpp  native_linkedlist.cpp  native_map.cpp  native_math.cpp  native_net.cpp  native_os.cpp  native_queue.cpp  native_random.cpp  native_regex.cpp  native_set.cpp  native_stack.cpp  native_string.cpp  native_tree.cpp
cpp/examples/: hello.dax
cpp/include/: ast.h  builtins.h  environment.h  interpreter.h  lexer.h  object.h  parser.h  token.h
cpp/src/: ast.cpp  builtins.cpp  environment.cpp  interpreter.cpp  lexer.cpp  main.cpp  object.cpp  parser.cpp
cpp/tests/: test_main.cpp
cpp_jit/: CMakeLists.txt
cpp_jit/include/: ast.h  lexer.h  parser.h  token.h
cpp_jit/src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp
cpp_jit/tests/: test_main.cpp
darix/: CMakeLists.txt  README.md  main.go
darix/ast/: ast.go
darix/examples/: classes.drx  functional.drx  functions.drx  hello.drx  pattern_matching.drx  variables.drx
darix/interpreter/: interpreter.go
darix/lexer/: lexer.go
darix/object/: object.go
darix/parser/: parser.go
darix/src/: main.cpp
darix/src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
darix/src/parser/: ast.cpp  ast.hpp  parser.hpp
darix/src/runtime/: environment.cpp  environment.hpp  value.cpp  value.hpp
darix/tests/: test_lexer.cpp
darix/token/: token.go
docs/: ERROR_TRACKING.md  NATIVE_LIBRARIES.md  NEW_KEYWORDS.md  architecture.md  building.md  cli.md  language.md  modules.md  tutorial.md
examples/: PERSISTENT_SERVER_README.md  comprehensive_test.dax  error_demo.dax  error_tracking_test.dax  extended_native_test.dax  hello_world.dax  http_server_test.dax  minimal_test.dax  native_libraries_test.dax  network_libraries_test.dax  persistent_web_server.dax  test_all.dax  vm_basic_test.dax  web_server_demo.dax
internal/config/: config.go
internal/fs/: fs.go
internal/log/: log.go
internal/native/: base.go  capabilities.go  collections.go  crypto.go  dns.go  ffi.go  fs.go  http.go  httpserver.go  json.go  math.go  os.go  path.go  random.go  regex.go  registry.go  smtp.go  socket.go  string.go  time.go  url.go  websocket.go
internal/pkgmgr/: pkgmgr.go
internal/version/: version.go
interpreter/: interpreter.go  interpreter_test.go  keywords_runtime.go  with_runtime.go
lexer/: lexer.go  lexer_test.go
object/: object.go  pool.go
parser/: decorators.go  parser.go
repl/: completion.go  input.go  repl.go
tests/: test_runner.dax
token/: token.go
vm/: helpers.go  jit.go  vm.go  vm_test.go
